--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,8 +9,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta http-equiv="Permissions-Policy" content="clipboard-write=()" />
     <link rel="manifest" href="/manifest.json" />
-    <title>devvit</title>
-  </head>
+    <title>Consensus Reality Monitor</title>
+    </head>
   <body class="h-full">
     <div id="root" class="h-full"></div>
     <script type="module" src="main.tsx"></script>
